--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
             <p id="user-dob">01/04/2004</p>
             <p id="user-job">Học sinh</p>
         </div>
+  <div>  
+        <audio id="background-music" loop>
+        <source src="nhac.mp3" type="audio/mpeg">
+    </audio>
+
+    <button id="music-toggle">Bật Nhạc</button>
+
+    <script src="script.js"></script>
+    
+    
     </div>
 
   
@@ -110,3 +120,4 @@
 </body>
 
 </html>
+
