--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <div class="info">
             <h1 id="user-name">NGUYỄN QUỐC LƯƠNG</h1>
             
-            <p id="user-location">HỒ CHÍ MINH</p>
+            <p id="user-location">PHÚ THỌ</p>
             <p id="user-dob">01/04/2004</p>
-            <p id="user-job">Học sinh</p>
+            <p id="user-job">du học sinh NHẬT BẢN</p>
         </div>
 
         <audio id="background-music" loop>
@@ -118,3 +118,4 @@
 </body>
 
 </html>
+
