--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             
             <p id="user-location">PHÚ THỌ</p>
             <p id="user-dob">01/04/2004</p>
-            <p id="user-job">du học sinh NHẬT BẢN</p>
+            <p id="user-job">NHẬT BẢN</p>
         </div>
 
         <audio id="background-music" loop>
@@ -118,4 +118,5 @@
 </body>
 
 </html>
+
 
