--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝘒𝘦𝘳𝘰𝘓𝘶𝘰𝘯𝘨</title>
@@ -275,6 +276,7 @@
 </body>
 
 </html>
+
 
 
 
