--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
     <script src="script.js"></script>
 
 
+<div class="profile-container">
+    </div>
+        
         <div class="social-container">
     <a href="https://www.tiktok.com/@your_username" target="_blank">
         <i class="fab fa-tiktok"></i>
@@ -276,6 +279,7 @@
 </body>
 
 </html>
+
 
 
 
