--- a/index.html
+++ b/index.html
@@ -133,10 +133,63 @@
         <a href="https://www.tiktok.com/@your_username" target="_blank">
             <i class="fab fa-tiktok"></i>
         </a>
-        <a href="https://www.facebook.com/your_username" target="_blank">
+        <a href="https://www.facebook.com/nql.boy     margin: 0;
+            font-size: 18px;
+            color: #1c0fd8;
+        }
+
+        .social-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 900px;
+            width: 90%;
+        }
+
+        .social-container a {
+            color: #333;
+            font-size: 30px;
+            transition: color 0.3s ease;
+        }
+
+        .social-container a:hover {
+            color: #007bff;
+        }
+    </style>
+</head>
+<body>
+    <div class="video-container">
+        <video autoplay muted loop id="background-video">
+            <source src="video.mp4" type="video/mp4">
+            Trình duyệt của bạn không hỗ trợ video.
+        </video>
+    </div>
+
+    <div class="profile-container">
+        <div class="header"></div>
+        <img src="avt.jpg" alt="Avatar" class="avatar" id="avatar-image">
+        <div class="info">
+            <h1 id="user-name">NGUYỄN QUỐC LƯƠNG</h1>
+            <p id="user-location">PHÚ THỌ</p>
+            <p id="user-dob">01/04/2004</p>
+            <p id="user-job">NHẬT BẢN</p>
+        </div>
+    </div>
+
+    <div class="social-container">
+        <a href="https://tiktok.com/@nguyenquocluong2k4?_t=ZS-8zqRZhk1Rai&_r=1" target="_blank">
+            <i class="fab fa-tiktok"></i>
+        </a>
+        <a href="https://www.facebook.com/nql.boy" target="_blank">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="https://discord.gg/your_invite_code" target="_blank">
+        <a href="https://discord.com/users/990473004830064660" target="_blank">
             <i class="fab fa-discord"></i>
         </a>
     </div>
@@ -150,3 +203,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
