--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         .profile-container {
             max-width: 900px;
-            width: 90%; /* Dùng 90% thay cho 100% để có lề đẹp hơn */
+            width: 90%;
             background-color: #c4424259;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -59,7 +59,7 @@
             height: 150px;
             border-radius: 50%;
             border: 4px solid #fff;
-            margin-top: -75px; /* Điều chỉnh lại margin cho phù hợp với kích thước mới */
+            margin-top: -75px;
             background-color: #ccc;
             display: block;
             margin-left: auto;
@@ -67,7 +67,7 @@
         }
 
         .info {
-            padding: 40px; /* Sửa '4x' thành '40px' */
+            padding: 40px;
             text-align: center;
         }
 
@@ -76,7 +76,7 @@
             font-size: 24px;
             margin-bottom: 10px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #00FF00; /* Màu của h1 */
+            color: #00FF00;
         }
 
         .info p {
@@ -84,56 +84,6 @@
             font-size: 18px;
             color: #1c0fd8;
         }
-
-        .social-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            margin-top: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 900px;
-            width: 90%;
-        }
-
-        .social-container a {
-            color: #333;
-            font-size: 30px;
-            transition: color 0.3s ease;
-        }
-
-        .social-container a:hover {
-            color: #007bff;
-        }
-    </style>
-</head>
-<body>
-    <div class="video-container">
-        <video autoplay muted loop id="background-video">
-            <source src="video.mp4" type="video/mp4">
-            Trình duyệt của bạn không hỗ trợ video.
-        </video>
-    </div>
-
-    <div class="profile-container">
-        <div class="header"></div>
-        <img src="avt.jpg" alt="Avatar" class="avatar" id="avatar-image">
-        <div class="info">
-            <h1 id="user-name">NGUYỄN QUỐC LƯƠNG</h1>
-            <p id="user-location">PHÚ THỌ</p>
-            <p id="user-dob">01/04/2004</p>
-            <p id="user-job">NHẬT BẢN</p>
-        </div>
-    </div>
-
-    <div class="social-container">
-        <a href="https://www.tiktok.com/@your_username" target="_blank">
-            <i class="fab fa-tiktok"></i>
-        </a>
-       
 
         .social-container {
             display: flex;
@@ -200,5 +150,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
