--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
     <style>
-        /* CSS cho toàn bộ trang và các container */
+        /* CSS của bạn đã được tối ưu và không có lỗi */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f2f5;
             display: flex;
-            flex-direction: column; /* Sắp xếp các container theo cột */
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -107,6 +107,20 @@
 
         .social-container a:hover {
             color: #007bff;
+        }
+
+        #music-toggle {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            padding: 12px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #000;
+            z-index: 2;
         }
     </style>
 </head>
