--- a/index.html
+++ b/index.html
@@ -86,17 +86,16 @@
         }
 
         .social-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            margin-top: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 900px;
+        
+
+              max-width: 900px;
             width: 90%;
+            background-color: #c4424259;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            position: relative;
+            margin: 20px;
         }
 
         .social-container a {
@@ -164,3 +163,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
