--- a/index.html
+++ b/index.html
@@ -86,16 +86,17 @@
         }
 
         .social-container {
-        
-
-              max-width: 900px;
-            width: 90%;
-            background-color: #c4424259;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+            background-color: #fff;
             border-radius: 10px;
+            padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            position: relative;
-            margin: 20px;
+            max-width: 900px;
+            width: 90%;
         }
 
         .social-container a {
@@ -163,4 +164,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
