--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
  
     <div class="video-container">
         <video autoplay muted loop id="background-video">
-            <source src="https://www.dropbox.com/scl/fi/9019e2z4wf842z68c43p2/video.mp4?rlkey=513z8f0kcns6a8d22n11584y3&st=dxx0zkz5&raw=1" type="video/mp4">
+            <source src="video.mp4" type="video/mp4">
             Trình duyệt của bạn không hỗ trợ video.
         </video>
     </div>
@@ -211,3 +211,4 @@
     </script>
 </body>
 </html>
+
