--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
         <a href="https://discord.com/users/990473004830064660" target="_blank">
             <i class="fab fa-discord"></i>
         </a>
+        <a> href="https://t.me/nqlboy" target="_blank">
+            <i class="fab fa-Telegram"></i>
+        </a>
     </div>
 
     <!-- Nhạc nền -->
@@ -211,4 +214,5 @@
     </script>
 </body>
 </html>
+
 
